--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -11,30 +11,27 @@
         margin: 0;
         padding: 0;
     }
-    .contain-table {
-        display: flex;
-
-        div {
-            display: flex;
-            align-items: center;
-            text-align: center;
-            width: 50%;
-            height: 100px;
-            border: 1px solid black;
-        }
-        .first {
-            background-color: rgb(148, 50, 50);
-        }
-        .second {
-            background-color: rgb(36, 140, 36);
-        }
-        
+    table {
+        width: 100%;
+        height: 100px;
+        border-collapse: collapse;
+        border: 1px solid black;
+    }
+    th {
+        text-align: start;
+        padding-left: 10px;
+    }
+    .first {
+        background-color: rgb(206, 73, 73);
+    }
+    .second {
+        background-color: rgb(36, 140, 36);
     }
 </style>
 <body>
-    <section class="contain-table">
-        <div class="first" ><p>First cell</p></div>
-        <div class="second"><p>Second cell</p></div>
-    </section>
+    <table>
+        <th class="first"> First cell </th>
+        <th class="second"> Second cell </th>
+    </table>
 </body>
 </html>
