feat : add  setInterval

--- a/cell03/ex02/calc.html
+++ b/cell03/ex02/calc.html
@@ -67,9 +67,9 @@
     const op = document.getElementById("op");
     const calForm = document.getElementById("calForm");
 
-    // setInterval(() => {
-    //   alert("Please, use me...");
-    // }, 30000);
+    setInterval(() => {
+      alert("Please, use me...");
+    }, 30000);
 
     calForm.addEventListener("submit", (event) => {
         event.preventDefault();
