--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="backgroound.css">
 </head>
 <body>
-
-    <button onclick="changeBackground()"> Click me! </button>
+    <div class="container">
+        <button onclick="changeBackground()"> Click me! </button>
+    </div>
 
     <script>
         function changeBackground() {
