update : config img name

--- a/rush/nphiphat/nphiphat.html
+++ b/rush/nphiphat/nphiphat.html
@@ -133,16 +133,16 @@
         </div>
         <div class="flex flex-wrap justify-center gap-8">
             <div class="h-max p-2.5 rounded-3xl border-4 border-[#6568ab] justify-start items-center gap-2.5">
-                <img class="w-100 h-80 rounded-3xl object-cover" src="img/audi.JPEG" />
+                <img class="w-100 h-80 rounded-3xl object-cover" src="img/audi.png" />
             </div>
             <div class="h-max p-2.5 rounded-3xl border-4 border-[#6568ab] justify-start items-center gap-2.5">
-                <img class="w-100 h-80 rounded-3xl object-cover" src="img/haven.JPEG" />
+                <img class="w-100 h-80 rounded-3xl object-cover" src="img/haven.jpg" />
             </div>
             <div class="h-max p-2.5 rounded-3xl border-4 border-[#6568ab] justify-start items-center gap-2.5">
-                <img class="w-100 h-80 rounded-3xl object-cover" src="img/group.JPEG" />
+                <img class="w-100 h-80 rounded-3xl object-cover" src="img/group.png" />
             </div>
             <div class="h-max p-2.5 rounded-3xl border-4 border-[#6568ab] justify-start items-center gap-2.5">
-                <img class="w-100 h-80 rounded-3xl object-cover" src="img/pluk_win.JPEG" />
+                <img class="w-100 h-80 rounded-3xl object-cover" src="img/win_pluk.jpg" />
             </div>
         </div>
     </section>
