--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -67,11 +67,13 @@
 </body>
 <script>
     $(document).ready(function() {
+
         setInterval(() => {
             alert("Please, use me...");
         }, 30000);
-
+        
         $("#calForm").submit(function(event) {
+            event.preventDefault();
             let value1 = $("#val1").val();
             let value2 = $("#val2").val();
             let opar = $("#op").val();
@@ -79,9 +81,6 @@
             if (isNaN(value1) || isNaN(value2)) {
                 alert("Error :(");
                 console.log("Error :(");
-                $("#val1").val("");
-                $("#val2").val("");
-                $("#op").val("+");
                 return;
             }
 
@@ -91,28 +90,18 @@
             if (value1 < 0 || value2 < 0) {
                 alert("Error :(");
                 console.log("Error :(");
-                $("#val1").val("");
-                $("#val2").val("");
-                $("#op").val("+");
                 return;
             }
 
             if ((opar == "/" || opar == "%") && (value1 == 0 || value2 == 0)) {
                 alert("It's over 9000!");
                 console.log("It's over 9000!");
-                $("#val1").val("");
-                $("#val2").val("");
-                $("#op").val("+");
                 return;
             }
 
             const result = eval(`${value1} ${opar} ${value2}`);
-            console.log(result);
             alert("Result : " + result);
-
-            $("#val1").val("");
-            $("#val2").val("");
-            $("#op").val("+");
+            console.log(result);
         });
     });
 </script>
